@@ -1,0 +1,12 @@
+name    = DZT0
+author  = Caleb Cushing <xenoterracide@gmail.com>
+license =  Artistic_2_0
+version = 0.01_02
+copyright_holder = Caleb Cushing
+
+[@Filter]
+-bundle = @Basic
+-remove = Readme
+
+[OurPkgVersion]
+underscore_eval_version = 1
