@@ -60,6 +60,7 @@ location = root
 	stopwords = ini
 	stopwords = executables
 	stopwords = perltidy
+	stopwords = FileFinder
 
 [PruneFiles]
 	filenames = dist.ini
