@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-OurPkgVersion
 
 {{$NEXT}}
+  - Add underscore_eval_version property
 
 0.11      2017-07-02
   - use :PerlExecFiles filefinder whenever possible
